# nightyagi.me

./: .gitignore  Cargo.toml  README.md  config.toml.sample  site.webmanifest
src/: main.rs  settings.rs
static/css/: main.css  main.css.map
static/sass/: main.scss
templates/: index.html
templates/global/: error.html  footer.html  header.html
