[package]
name = "nightyagi-website"
version = "0.1.0"
authors = ["XNBlank <koruten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http      = "1.0.1"
actix-web       = "2.0"
actix-rt        = "1.1.1"
actix-files     = "0.2.2"
tera            = "1.5.0"
env_logger      = "0.7"
serde           = { version = "1.0.114", features = ["derive"] }
serde_json      = "1.0.57"
lettre          = "0.9.3"
lettre_email    = "0.9.4"
recaptcha       = "0.4.1"
lazy_static     = "1.4.0"
config          = "0.10.1"